--- a/sesstionFetch/h.html
+++ b/sesstionFetch/h.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="h.css">
 </head>
 <body>
-    <h1>Omar</h1>
+    <h1>Mona</h1>
 
     
     <script src="h.js"></script>
